--- a/templates/customer/order_detail.html
+++ b/templates/customer/order_detail.html
@@ -32,6 +32,29 @@
                         <p style="color: red; margin-top: 15px;">Заказ отправлен на доработку</p>
                     {% elif order.is_approved %}
                         <p style="color: green; margin-top: 15px;">Заказ проверен ✔️</p>
+{#                        <form action="{% url 'customer:rate_order' order.id %}" method="post" class="left-pos">#}
+{#                            {% csrf_token %}#}
+{#                            <div class="rating">#}
+{#                                {% for i in "54321" %}#}
+{#                                    <input type="radio" id="star{{ i }}" name="rate" value="{{ i }}"#}
+{#                                            {% if order.rating == i|add:"0" %}checked{% endif %}/>#}
+{#                                    <label for="star{{ i }}" title="Оценка {{ i }}">#}
+{#                                        <svg#}
+{#                                                viewBox="0 0 576 512"#}
+{#                                                height="1em"#}
+{#                                                xmlns="http://www.w3.org/2000/svg"#}
+{#                                                class="star-solid">#}
+{#                                            <path#}
+{#                                                    d="M316.9 18C311.6 7 300.4 0 288.1 0s-23.4 7-28.8 18L195 150.3 51.4 171.5c-12 1.8-22 10.2-25.7 21.7s-.7 24.2 7.9 32.7L137.8 329 113.2 474.7c-2 12 3 24.2 12.9 31.3s23 8 33.8 2.3l128.3-68.5 128.3 68.5c10.8 5.7 23.9 4.9 33.8-2.3s14.9-19.3 12.9-31.3L438.5 329 542.7 225.9c8.6-8.5 11.7-21.2 7.9-32.7s-13.7-19.9-25.7-21.7L381.2 150.3 316.9 18z"#}
+{#                                            ></path>#}
+{#                                        </svg>#}
+{#                                    </label>#}
+{#                                {% endfor %}#}
+{#                            </div>#}
+{#                            <button type="submit" class="rate-button">Оценить</button>#}
+{#                        </form>#}
+
+
                     {% elif order.is_finished %}
                         <p style="color: #ffcc00; margin-top: 15px;">Заказ завершен, ожидание проверки 🕐</p>
                         <div class="buttons">
