--- a/templates/customer/programmer_portfolio.html
+++ b/templates/customer/programmer_portfolio.html
@@ -17,7 +17,9 @@
                     </div>
                     <div class="outer-img-cnt">
                         <div class="image-container">
-                            <img src="{{ portfolio.image.url }}" alt="photo">
+                            {% if portfolio.image %}
+                                <img src="{{ portfolio.image.url }}" alt="photo">
+                            {% endif %}
                         </div>
                     </div>
                 </div>
