made registration and login form adapted to phone

--- a/templates/customer/order_list.html
+++ b/templates/customer/order_list.html
@@ -39,7 +39,7 @@
             </div>
         </a>
     {% empty %}
-        <p>Вы не создали ни одного заказа</p>
+        <p class="noone">Вы не создали ни одного заказа</p>
     {% endfor %}
     <div class="pagination">
     <span class="step-links">
