--- a/templates/home/login.html
+++ b/templates/home/login.html
@@ -15,7 +15,7 @@
 <h1 class="auth-label">Вход</h1>
 
 <div class="form-container">
-    <form method="post" class="form">
+    <form method="post" class="form" autocomplete="on">
         {% csrf_token %}
 
         <!-- Поле Email (username) -->
