--- a/templates/programmer/home.html
+++ b/templates/programmer/home.html
@@ -13,7 +13,7 @@
         {% if not has_portfolio %}
             <div class="centered">
                 <div class="p-home">
-                    <h3>Чтобы начать выполнять заказы, заполните портфолио.</h3>
+                    <h3 class="centered">Чтобы начать выполнять заказы, заполните портфолио.</h3>
                     <div class="p-btn-cnt">
                         <a href="{% url 'programmer:portfolio_create' %}">Заполнить портфолио</a>
                     </div>
