--- a/home/static/css/login.css
+++ b/home/static/css/login.css
@@ -1,5 +1,5 @@
 body {
-    background: rgb(166, 166, 166);
+    background: #F5F5F5;
 }
 
 .form-container {
@@ -127,11 +127,11 @@ body {
 }
 
 #id_username, #id_password, #id_first_name, #id_last_name, #id_email, #id_password2 {
-    width: 400px;
+    width: 399px;
     border: none;
     height: 45px;
     margin-left: 5px;
-    border-radius: 5px;
+    border-radius: 8px;
     padding-left: 10px;
     font-size: 17px;
 }
@@ -173,3 +173,59 @@ body {
     font-size: 17px;
     font-weight: 600;
 }
+
+@media (max-width: 480px) {
+    .form-container {
+        margin: 10px;
+    }
+
+    .form {
+        width: 100%;
+        padding: 10px 20px 20px 20px;
+    }
+
+    #id_username,
+    #id_password,
+    #id_first_name,
+    #id_last_name,
+    #id_email,
+    #id_password2 {
+        width: calc(100% - 35px);
+        font-size: 16px;
+    }
+
+    .button-submit,
+    .cancel-button,
+    .btn {
+        width: 100%;
+        height: 45px;
+        font-size: 14px;
+    }
+
+    .form {
+        border-radius: 0px;
+        background: #F5F5F5;
+    }
+
+    .inputForm {
+        flex-direction: row;
+        height: 45px;
+        background: #f8f7f7;
+    }
+
+    .input {
+        width: 100%;
+        margin-left: 5px;
+    }
+
+    .flex-row {
+        flex-direction: column;
+        gap: 5px;
+        align-items: flex-start;
+    }
+
+    .id-group-item {
+        margin: 5px 0;
+    }
+}
+
