--- a/templates/home/registration.html
+++ b/templates/home/registration.html
@@ -14,7 +14,7 @@
 <h1 class="auth-label">Регистрация</h1>
 
 <div class="form-container">
-    <form method="post" class="form">
+    <form method="post" class="form" autocomplete="off">
         {% csrf_token %}
         <div class="flex-column">
             <label for="{{ user_form.username.id_for_label }}">Логин:</label>
